--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <form id="addToDoForm">
       <label for="newToDoText">New To-do:</label>
       <input type="text" id="newToDoText">
-      <button type="submit" name="Add To-Do!">Add To-do</button>
+      <button type="submit" name="Add To-Do!">Add To-Do</button>
+      <button type="delete" name="Delete To-Do">Delete To-Do</button>
     </form>
     <ul id="toDoList">
 
