Todo with delete functionality

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <form id="addToDoForm">
       <label for="newToDoText">New To-do:</label>
       <input type="text" id="newToDoText">
-      <button type="submit" name="Add To-Do!">Add To-Do</button>
-      <button type="delete" name="Delete To-Do">Delete To-Do</button>
+      <button type="submit">Add To-Do</button>
     </form>
     <ul id="toDoList">
-
     </ul>
     <script src="app.js"></script>
 
